2006-09-07 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.1: The avr109 programmer type no longer chokes on
	a wrong avr910 device ID, so remove that description.
	* doc/avrdude.texi: (Ditto.)

2006-09-07 Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkII.c: When failing to start in ISP mode, try
	debugWire instead.  This requires the user to eventually
	restart AVRDUE from scratch then.

2006-09-06 Joerg Wunsch <j@uriah.heep.sax.de>

	Add support for the JTAG ICE mkII in ISP mode.
	* avrdude.conf.in (jtag2isp): New programmer entry.
	* config_gram.y: Add K_JTAG_MKII_ISP.
	* jtagmkII.c: Restructure and export some more functions.
	* jtagmkII.h: Declare exported functions.
	* jtagmkII_private.h: Prepare file to be included in stk500v2.c.
	* lexer.l: Add jtagmkii_isp token.
	* stk500v2.c: Implement glue to jtagmkII.c.
	* stk500v2.h: Declare stk500v2_jtagmkII_initpgm().
	* avrdude.1: Document the new programmer support.
	* doc/avrdude.texi: (Ditto.)

2006-09-01 Joerg Wunsch <j@uriah.heep.sax.de>

	* main.c: Add date and time of compilation to the verbose
	greeting message.
	Idea taken from patch #3172: Adds date and time of compile
	to usage message

2006-09-01 Joerg Wunsch <j@uriah.heep.sax.de>

	Contributed by <avrdude@zevv.nl> as
	patch #4372: Better synchronization for stk500
	* stk500.c: Sync three times, and drop any noise inbetween.

2006-09-01 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in (ATtiny261, ATtiny461, ATtiny861): new
	entries.

2006-09-01 Joerg Wunsch <j@uriah.heep.sax.de>

	* butterfly.c: Remove the device support decision based on
	the old AVR910 device codes; we've got signature verification
	now so better rely on that.
	* avr910.c: Revert the signature bytes returned, as it already
	happened in butterfly.c.  This closes bug #14998: Signature Bytes
	read in wrong order (avr910 mode)

2006-09-01 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Wim Lewis.
	* serbb_posix.c: Improve error handling.